fix flex issues on IE

--- a/public/assets/css/_scss/index.scss
+++ b/public/assets/css/_scss/index.scss
@@ -105,4 +105,8 @@ main > section:nth-child(odd) {
   .hero-col {
     text-align: right;
   }
+
+  .index-header__row {
+    padding-top: 50px;
+  }  
 }
